Polish wording in organizations/index.html

--- a/website/organizations/index.html
+++ b/website/organizations/index.html
@@ -59,7 +59,7 @@
         </h3>
         <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
           <li>
-            {{ _('Desktop email client packed with features') }}
+            {{ _('Cross-platform desktop email client packed with features') }}
           </li>
           <li>
             {{ _('Integrated calendar application (PIM)') }}
