Mention SUMO on Get Involved page under Documentation.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -285,10 +285,13 @@
         <h4 class="subheader-section">{{ _('Contributing to documentation') }}</h4>
         <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
           <li>
-            {{ _('You can contribute to the Thunderbird developer documentation via its repository <a href="https://github.com/thundernest/developer-docs"> on GitHub.</a>') }}
+            {{ _('Support users asking for help on the <a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support Forum.</a>') }}
           </li>
           <li>
-            {{ _('Support users asking for help on the <a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support Forum</a>') }}
+            {{ _('You can create and improve documentation to help users on <a href="https://support.mozilla.org/en-US/products/thunderbird">SUMO, the Thunderbird user support site.</a>') }}
+          </li>
+          <li>
+            {{ _('You can contribute to the Thunderbird developer documentation via its repository <a href="https://github.com/thundernest/developer-docs"> on GitHub.</a>') }}
           </li>
         </ul>
       </article>
