Update careers page copy.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -214,7 +214,7 @@
           {{ _('A cover letter is essential to your application! Tell us about why you’re passionate about Thunderbird and this position. Also include samples of your work, either directly or as a link. If you contribute to any open source software, or maintain a blog we’d love to hear about it!') }}
         </p>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('The successful applicant will be hired through the third-party service Upwork. Your work will be directed through the Thunderbird project’s technical manager. By applying for this job, you are agreeing to have your application reviewed by Thunderbird contractors and volunteers who are a part of the hiring committee as well as by staff members at the Mozilla Foundation and companies under its umbrella.') }}
+          {{ _('The successful applicant will be hired through MZLA Technologies Corporation. Your work will be directed through the Thunderbird project’s technical manager. By applying for this job, you are agreeing to have your application reviewed by Thunderbird contractors and volunteers who are a part of the hiring committee as well as by staff members at the Mozilla Foundation and companies under its umbrella.') }}
         </p>
       </aside>
     </section>
