Fix link colors on org page.

--- a/website/organizations/index.html
+++ b/website/organizations/index.html
@@ -21,7 +21,7 @@
         <h3 class="header-section">
           <span>{{ svg('envelope') }}</span> {{ _('Thunderbird for Organizations')}}
         </h3>
-        <p class="font-lg tracking-wider leading-loose mb-6">
+        <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
           {{ _('Thunderbird comes with a number of key benefits which make it an excellent choice for organizational deployments of any size. And it&#39;s more than just email: As an all-in-one communication platform with integrated calendar and chat, Thunderbird is all about efficiency. Whether you are a small business or organization, a government institution, or a large enterprise - Thunderbird has been designed to scale to your needs. Learn more about the <a href="#benefits">benefits of using Thunderbird in an organization.</a>')}}
 
         <h3 class="subheader-section">
