Fix some whitespace on org page.

--- a/website/organizations/index.html
+++ b/website/organizations/index.html
@@ -21,7 +21,7 @@
         <h3 class="header-section">
           <span>{{ svg('envelope') }}</span> {{ _('Thunderbird for Organizations')}}
         </h3>
-        <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+        <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
           {{ _('Thunderbird comes with a number of key benefits which make it an excellent choice for organizational deployments of any size. And it&#39;s more than just email: As an all-in-one communication platform with integrated calendar and chat, Thunderbird is all about efficiency. Whether you are a small business or organization, a government institution, or a large enterprise - Thunderbird has been designed to scale to your needs. Learn more about the <a href="#benefits">benefits of using Thunderbird in an organization.</a>')}}
 
         <h3 class="subheader-section">
@@ -34,11 +34,11 @@
         <h3 class="subheader-section">
           {{ _('Get Thunderbird for your organization') }}
         </h3>
-        <p class="font-lg tracking-wider leading-loose mb-10 mt-0 p-links-blue">
+        <p class="font-lg tracking-wider leading-loose mt-0 p-links-blue">
           {{ _('Thunderbird is available in a <a href="{syslang}">variety of languages</a> for all major operating systems (Windows / MacOS / Linux). For multi-lingual environments, you can download language pack add-ons and switch Thunderbird’s user interface language on the fly. We offer a number of resources specifically for organizations:')|f(syslang=url('thunderbird.latest.all')) }}
         </p>
 
-        <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
+        <ul class="font-md tracking-wider leading-loose mb-6 mt-0 p-links-blue">
           <li>
             {{ _('For Windows deployment, you can find the Thunderbird MSI Installer on the <a href="{syslang}">Systems &amp; Languages page</a>.')|f(syslang=url('thunderbird.latest.all')) }}
           </li>
