--- a/website/thunderbird/91.0/whatsnew/index.html
+++ b/website/thunderbird/91.0/whatsnew/index.html
@@ -24,25 +24,28 @@
       </div>
     </aside>
     <aside class="xl:flex hidden xl:ml-8">
-      <img class="w-full h-auto mb-10 max-w-2xl self-center" src="{{ static('/media/img/thunderbird/whatsnew/91/91-header.png') }}" alt="Screenshot of Thunderbird's new system dark mode.">
+      <img class="w-full h-auto mb-10 max-w-2xl self-center shadow-img" src="{{ static('/media/img/thunderbird/whatsnew/91/91-header.png') }}" alt="Screenshot of Thunderbird's new system dark mode.">
     </aside>
 
   </section>
 {% endblock %}
 
 {% block content %}
-  <section class="pt-20 pb-20 flex justify-center bg-calendar">
-    <aside class="flex flex-col flex-1 max-w-6xl ml-16 mr-16">
-      <!-- Add half screenshot of dark theme -->
-      <img class="w-full h-auto mb-10 max-w-lg self-center shadow-lg" src="{{ static('/media/img/thunderbird/whatsnew/91/account-setup-thunderbird-91.png') }}" alt="Screenshot of Thunderbird's new account setup wizard.">
-      <h3 class="header-section">
-        <span>{{ svg('customize') }}</span>
-        {{ _('New Account Setup')}}
-      </h3>
-      <p class="font-lg tracking-wider leading-loose mb-10">
-        {{ _('One of the most noticeable changes for Thunderbird 91 is the new account setup wizard. The new wizard not only features a better look, but does auto-discovery of calendars and address books and allows most users to set them up with just a click. After setting up an account, the wizard also points users at additional (optional) things to do – such as adding a signature or setting up end-to-end encryption.') }}
-      </p>
-    </aside>
+  <section class="pt-20 pb-20 flex justify-center">
+    <div class="flex flex-1 flex-wrap max-w-6xl ml-16 mr-16">
+      <aside class="flex-1 xl:mr-8">
+        <img class="w-full h-auto mb-10 max-w-2xl self-center shadow-img" src="{{ static('/media/img/thunderbird/whatsnew/91/91-account-creation.png') }}" alt="Screenshot of Thunderbird's new account setup wizard.">
+      </aside>
+      <aside class="flex-col flex-1 items-start">
+        <h3 class="header-section">
+          <span>{{ svg('customize') }}</span>
+          {{ _('New Account Setup')}}
+        </h3>
+        <p class="font-lg tracking-wider leading-loose mb-10">
+          {{ _('One of the most noticeable changes for Thunderbird 91 is the new account setup wizard. The new wizard not only features a better look, but does auto-discovery of calendars and address books and allows most users to set them up with just a click. After setting up an account, the wizard also points users at additional (optional) things to do – such as adding a signature or setting up end-to-end encryption.') }}
+        </p>
+      </aside>
+    </div>
   </section>
 
   <section class="pb-10 flex flex-col lg:flex-row max-w-6xl mx-auto justify-between pl-8 pr-8">
