--- a/website/thunderbird/91.0/whatsnew/index.html
+++ b/website/thunderbird/91.0/whatsnew/index.html
@@ -85,6 +85,7 @@
     </div>
   </section>
 
+  {% if not LANG.startswith('zh') %}
   <!-- Mozilla VPN banner -->
   <section class="pt-20 pb-20 flex justify-center bg-grey-light">
     <div class="flex items-center lg:flex-row flex-col flex-col-reverse flex-1 max-w-6xl ml-16 mr-16">
@@ -99,12 +100,13 @@
         <p class="font-lg tracking-wider leading-loose mb-10">
           {{ _('Whether its work or play, you deserve to have privacy when you are online. A VPN, Virtual Private Network, can help you create a secure, private connection to the internet. So that when you are traveling, connecting to WiFi, or simply want more online security - you know that your information is protected from prying eyes.') }}
         </p>
-        <a href="https://www.mozilla.org/products/vpn/" class="btn-body self-start" target="_blank">
+        <a href="https://www.mozilla.org/products/vpn/?utm_source=thunderbird&utm_medium=tbwnp&utm_campaign=2021" class="btn-body self-start" target="_blank">
           {{_('Learn More')}} <span>{{ svg('chevron-right') }}</span>
         </a>
       </aside>
     </div>
   </section>
+  {% endif %}
 
   <!-- Calendar sidebar -->
   <section class="pt-20 pb-20 flex justify-center">
