--- a/website/thunderbird/91.0/whatsnew/index.html
+++ b/website/thunderbird/91.0/whatsnew/index.html
@@ -71,7 +71,7 @@
   <section class="pt-20 pb-20 flex justify-center">
     <div class="flex lg:flex-row flex-col flex-col-reverse flex-1 max-w-6xl ml-16 mr-16">
       <aside class="flex-1 lg:mr-8">
-        <img class="w-full h-auto max-w-2xl self-center shadow-img" src="{{ static('/media/img/thunderbird/whatsnew/91/thunderbird-91-density-ui.gif') }}" alt="Screenshot of the new UI density options in Thunderbird.">
+        <img class="w-full h-auto max-w-2xl self-center shadow-img" src="{{ static('/media/img/thunderbird/whatsnew/91/UI-Density-Control.png') }}" alt="Screenshot of the new UI density options in Thunderbird.">
       </aside>
       <aside class="flex-col flex-1 items-start">
         <h3 class="header-section">
