Adjust whatsnew copy.

--- a/website/thunderbird/91.0/whatsnew/index.html
+++ b/website/thunderbird/91.0/whatsnew/index.html
@@ -108,7 +108,7 @@
   </section>
   {% endif %}
 
-  <!-- Calendar sidebar -->
+  <!-- Calendar Improvements -->
   <section class="pt-20 pb-20 flex justify-center">
     <div class="flex lg:flex-row flex-col flex-col-reverse flex-1 max-w-6xl ml-16 mr-16">
       <aside class="flex-1 lg:mr-8">
@@ -120,7 +120,7 @@
           {{ _('Calendar Improvements')}}
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-10">
-          {{ _('Managing multiple calendars has been made easier with the calendar sidebar improvements in this release. There is a quick enable button for disabled calendars, as well as a show/hide icon for easily toggling what calendars are visible. There is also a lock indicator for read-only calendars. Additionally, although not a sidebar improvement, there are now better color accents to highlight the current day in the calendar.') }}
+          {{ _('Managing multiple calendars has been made easier with the calendar sidebar improvements in this release. There is a quick enable button for disabled calendars, as well as a show/hide icon for easily toggling what calendars are visible. There is also a lock indicator for read-only calendars. Additionally, there are now better color accents to highlight the current day in the calendar.') }}
         </p>
       </aside>
     </div>
