Fix reference to .ics files in What's New 91.

--- a/website/thunderbird/91.0/whatsnew/index.html
+++ b/website/thunderbird/91.0/whatsnew/index.html
@@ -175,7 +175,7 @@
         <li>{{ _('CardDAV Address Book Support (and CardDAV auto-detection support)') }}</li>
         <li>{{ _('Printing UI updated') }}</li>
         <li>{{ _('Ability to change order of accounts in UI') }}</li>
-        <li>{{ _('Support opening of .ics files by double-click in calendar') }}</li>
+        <li>{{ _('Registers to handle .ics files, letting you preview and import events to the calendar by double clicking the file') }}</li>
       </ul>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
         {{ _('You can see details of all our changes in the release notes for <a href="%(release)s">Thunderbird 91.0 and up</a>.')|format(release=url('thunderbird.releases.index')) }}
